[package]
name = "fortnite-cheat"
version = "0.1.0"
authors = ["Ryan McCrystal <rrmccrystal@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# My memory library to read / write process memory
# Either clone this to the parent directory, or use the
# `git` flag with https://github.com/rmccrystal/memlib-rs
memlib = { path = "../memlib-rs" }